added: 最小限の動作コード

--- a/manifest.json
+++ b/manifest.json
@@ -208,7 +208,9 @@
       ]
     }
   ],
-  "permissions": [],
+  "permissions": [
+    "<all_urls>"
+  ],
   "background": {
     "scripts": [
       "dist/background/main.js"
