--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,11 @@
       "strict_min_version": "78.0"
     }
   },
+  "icons": {
+    "48": "icon-48.png",
+    "96": "icon-96.png",
+    "128": "icon-128.png"
+  },
   "content_scripts": [
     {
       "matches": [
