--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,5 @@ temp/
 # End of https://www.toptal.com/developers/gitignore/api/node
 
 web-ext-artifacts/
+
+google-search-title-qualified.tar.gz
