fixed: circleci: タグつけされたコミットだけデプロイ指定する時はこのように書くらしい

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,6 @@ workflows:
             - lint
           filters:
             branches:
-              only: master
+              ignore: /.*/
             tags:
               only: /^v/
