added: Chrome Web Store向けのデプロイをCircleCIに実行させる
この方法で正しく実行されるか、まだ分からない。
とりあえず記述しておきます。

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,37 @@
-jobs:
-  lint:
+version: 2.1
+
+executors:
+  nodejs:
     docker:
       - image: circleci/node:14
+    working_directory: ~/google-search-title-qualified
+
+orbs:
+  cws: sugarshin/chrome-webstore@0.0.3
+
+jobs:
+  lint:
+    executor: nodejs
     steps:
       - checkout
       - run: yarn install --frozen-lockfile
       - run: yarn package
       - run: yarn lint
   deploy:
-    docker:
-      - image: circleci/node:14
+    executor: nodejs
     steps:
+      # lintと作業内容をディレクトリごとにスマートに共有する方法がよく分かってないので別個になっています。
       - checkout
       - run: yarn install --frozen-lockfile
       - run: yarn package
-      - run: yarn web-ext-submit
+      # Firefox向けにデプロイ。
+      - run: yarn web-ext-submit --config web-ext-config.js
+      # Chrome Wew Storeにデプロイするために保存しておきます。
+      - persist_to_workspace:
+          paths:
+            - web-ext-artifacts/google-search-title-qualified.zip
+          root: ~/google-search-title-qualified
+      # CircleCIのwebコンソールでもデプロイした内容が取得できるようにしておきます。
       - store_artifacts:
           path: web-ext-artifacts
       - store_artifacts:
@@ -33,3 +50,13 @@ workflows:
               ignore: /.*/
             tags:
               only: /^v/
+      - cws/upload:
+          attach-workspace: true
+          auto-publish: true
+          executor: nodejs
+          extension-id: bjcnnhojddnonjmhlpdjcdcfmofliagb
+          source: web-ext-artifacts/google-search-title-qualified.zip
+          use-yarn: true
+          workspace-root: ~/google-search-title-qualified
+          requires:
+            - deploy
