--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "archive": "git archive HEAD --output=google-search-title-qualified.tar.gz",
-    "build": "esbuild --bundle --outdir=dist --target=firefox78 --minify src/background/main.ts src/content/main.ts",
+    "build": "ts-node manifest.json.make.ts && esbuild --bundle --outdir=dist --target=firefox78 --minify src/background/main.ts src/content/main.ts",
     "fix": "FORCE_COLOR=1 run-p --print-label fix:*",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
@@ -15,7 +15,7 @@
     "lint:web-ext": "web-ext lint",
     "package": "rm -rf dist/ && yarn build && web-ext build --config web-ext-config.js && yarn archive",
     "start": "web-ext run --firefox-profile google-search-title-qualified",
-    "watch": "esbuild --bundle --watch --outdir=dist --target=firefox78 --sourcemap src/background/main.ts src/content/main.ts"
+    "watch": "ts-node manifest.json.make.ts && esbuild --bundle --watch --outdir=dist --target=firefox78 --sourcemap src/background/main.ts src/content/main.ts"
   },
   "devDependencies": {
     "@mysticatea/eslint-plugin": "^13.0.0",
