fixed: circleci: 文字列全体にマッチしないといけないから間違えていた疑惑により修正する

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,9 @@ workflows:
             - lint
           filters:
             branches:
-              only:
-                - master
+              ignore: /.*/
             tags:
-              only: /^v/
+              only: /^v.*/
       - cws/upload:
           attach-workspace: true
           auto-publish: true
