fixed: circleci: tagの全指定とbranchesの順番と指定内容の変更
[CircleCI 2.0 でworkflowを使ったtagからのデプロイ - Carpe Diem](https://christina04.hatenablog.com/entry/circleci-workflow)
を参考に記述。

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,15 +41,18 @@ workflows:
   version: 2
   lint-deploy:
     jobs:
-      - lint
+      - lint:
+          filters:
+            tags:
+              only: /^v.*/
       - deploy:
           requires:
             - lint
           filters:
-            branches:
-              only: master
             tags:
               only: /^v.*/
+            branches:
+              ignore: /.*/
       - cws/upload:
           attach-workspace: true
           auto-publish: true
@@ -60,3 +63,8 @@ workflows:
           workspace-root: ~/google-search-title-qualified
           requires:
             - deploy
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
