changed: URLの長さを80まで許容する
70は厳しすぎたようです。
日本語漢字のような文字列は長いため、
`stringWidth`を使って簡易的にフィルタリングします。

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dexie": "^3.0.3",
     "encoding-japanese": "^1.0.30",
     "node-fetch": "^2.6.1",
+    "string-width": "^5.0.0",
     "webextension-polyfill-ts": "^0.25.0"
   }
 }
