--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/encoding-japanese": "^1.0.17",
     "@types/node": "^16.7.10",
     "@types/node-fetch": "^2.5.10",
+    "@types/webextension-polyfill": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "esbuild": "^0.12.25",
@@ -42,6 +43,6 @@
     "encoding-japanese": "^1.0.30",
     "node-fetch": "^2.6.1",
     "string-width": "^5.0.0",
-    "webextension-polyfill-ts": "^0.26.0"
+    "webextension-polyfill": "^0.8.0"
   }
 }
