--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "web-ext-submit": "^6.1.0"
   },
   "dependencies": {
+    "async-sema": "^3.1.1",
     "date-fns": "^2.21.3",
     "dexie": "^3.0.3",
     "encoding-japanese": "^1.0.30",
