--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/webextension-polyfill": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "chrome-webstore-upload-cli": "^2.0.1",
     "esbuild": "^0.12.25",
     "eslint": "^7.25.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
