--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   nodejs:
     docker:
-      - image: circleci/node:14
+      - image: cimg/node:14.17
     working_directory: ~/google-search-title-qualified
 
 jobs:
