--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:prettier": "prettier --ignore-path .gitignore --check **/*.ts",
     "lint:tsc": "tsc --noEmit",
     "lint:web-ext": "web-ext lint",
-    "package": "rm -rf dist/ && yarn build && web-ext build --config web-ext-config.js && yarn archive",
+    "package": "rm -rf dist/ && yarn build && web-ext build --config web-ext-config.js",
     "start": "web-ext run --firefox-profile google-search-title-qualified",
     "watch": "ts-node manifest.json.make.ts && esbuild --bundle --watch --outdir=dist --target=firefox78 --sourcemap src/background/main.ts src/content/main.ts"
   },
