--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/webextension-polyfill": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "chrome-webstore-upload-cli": "^2.0.1",
     "esbuild": "^0.14.11",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -35,8 +34,7 @@
     "prettier": "^2.2.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.2.4",
-    "web-ext": "^6.6.0",
-    "web-ext-submit": "^6.6.0"
+    "web-ext": "^6.6.0"
   },
   "dependencies": {
     "async-sema": "^3.1.1",
