--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:prettier": "prettier --ignore-path .gitignore --check **/*.ts",
     "lint:tsc": "tsc --noEmit",
     "lint:web-ext": "web-ext lint",
-    "package": "rm -rf dist/ && yarn build && web-ext build --config web-ext-config.js",
+    "package": "rm -rf dist/ && yarn build && web-ext build",
     "start": "web-ext run",
     "watch": "ts-node manifest.json.make.ts && esbuild --bundle --watch --outdir=dist --target=firefox102 --sourcemap src/background/main.ts src/content/main.ts"
   },
