build: `FORCE_COLOR=1`
昔からのクセで追加していたけれど、
今となってはむしろバグの原因になる方が多い。

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "archive": "git archive HEAD --output=google-search-title-qualified.tar.gz",
     "build": "ts-node manifest.json.make.ts && esbuild --bundle --outdir=dist --target=firefox102 --minify src/background/main.ts src/content/main.ts",
-    "fix": "FORCE_COLOR=1 run-p --print-label fix:*",
+    "fix": "run-p --print-label fix:*",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
-    "lint": "FORCE_COLOR=1 run-p --print-label lint:*",
+    "lint": "run-p --print-label lint:*",
     "lint:eslint": "eslint --ignore-path .gitignore --cache --ext .ts --ext .tsx .",
     "lint:prettier": "prettier --ignore-path .gitignore --check **/*.ts",
     "lint:tsc": "tsc --noEmit",
