build(eslint): 不要になったルールを整理したりコメント付けたり

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
     "lint": "run-p --print-label lint:*",
-    "lint:eslint": "eslint --ignore-path .gitignore --cache --ext .ts --ext .tsx .",
+    "lint:eslint": "eslint --ignore-path .gitignore --cache --ext .js --ext .jsx --ext .ts --ext .tsx .",
     "lint:prettier": "prettier --ignore-path .gitignore --ignore-unknown --check '**/*.{js,jsx,ts,tsx,json,html,css,less,sass,scss,yml,yaml}'",
     "lint:tsc": "tsc --noEmit",
     "lint:web-ext": "web-ext lint",
