build: web-extのlint失敗などでESLintが実行されないことを回避する
`--continue-on-error`をつける。

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "archive": "git archive HEAD --output=google-search-title-qualified.tar.gz",
     "build": "ts-node manifest.json.make.ts && esbuild --bundle --outdir=dist --target=firefox102 src/background/main.ts src/content/main.ts",
-    "fix": "run-p --print-label fix:*",
+    "fix": "FORCE_COLOR=1 run-p --print-label --continue-on-error fix:*",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
-    "lint": "run-p --print-label lint:*",
+    "lint": "FORCE_COLOR=1 run-p --print-label --continue-on-error lint:*",
     "lint:eslint": "eslint --ignore-path .gitignore --cache --ext .js --ext .jsx --ext .ts --ext .tsx .",
     "lint:prettier": "prettier --ignore-path .gitignore --ignore-unknown --check '**/*.{js,jsx,ts,tsx,json,html,css,less,sass,scss,yml,yaml}'",
     "lint:tsc": "tsc --noEmit",
