--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "esbuild": "^0.25.1",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-import-resolver-typescript": "^4.2.5",
+    "eslint-plugin-import-x": "^4.9.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.3",
     "ts-node": "^10.9.2",
