--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "scripts": {
     "archive": "git archive HEAD --output=google-search-title-qualified.tar.gz",
     "build": "ts-node manifest.json.make.ts && esbuild --bundle --outdir=dist --target=firefox102 src/background/main.ts src/content/main.ts",
-    "fix": "FORCE_COLOR=1 run-p --print-label --continue-on-error fix:*",
-    "fix:eslint": "yarn lint:eslint --fix",
-    "fix:prettier": "yarn lint:prettier --write",
-    "lint": "FORCE_COLOR=1 run-p --print-label --continue-on-error lint:*",
+    "fix": "FORCE_COLOR=1 run-p --print-label --continue-on-error 'fix:*'",
+    "fix:eslint": "yarn 'lint:eslint' --fix",
+    "fix:prettier": "yarn 'lint:prettier' --write",
+    "lint": "FORCE_COLOR=1 run-p --print-label --continue-on-error 'lint:*'",
     "lint:eslint": "eslint --max-warnings 0",
     "lint:prettier": "prettier --ignore-path .gitignore --ignore-unknown --check '**/*.{js,jsx,ts,tsx,json,html,css,less,sass,scss,yml,yaml}'",
     "lint:tsc": "tsc --noEmit",
     "lint:web-ext": "web-ext lint",
-    "package": "rm -rf dist/ && yarn build && web-ext build",
+    "package": "rm -rf dist/ && yarn 'build' && web-ext build",
     "start": "web-ext run",
     "watch": "ts-node manifest.json.make.ts && esbuild --bundle --watch --outdir=dist --target=firefox102 --sourcemap src/background/main.ts src/content/main.ts"
   },
