--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
     "@eslint/js": "^9.35.0",
+    "@types/chrome": "^0.1.9",
     "@types/encoding-japanese": "^2.2.1",
     "@types/node": "^24.3.1",
     "@types/webextension-polyfill": "^0.12.3",
