chore(.gitignore): ビルド出力先を統一する

--- a/.gitignore
+++ b/.gitignore
@@ -143,7 +143,6 @@ dist
 
 # End of https://www.toptal.com/developers/gitignore/api/node
 
-web-ext-artifacts/
+build/
 
 google-search-title-qualified.tar.gz
-manifest.json
