build: generate versioned chrome/firefox zips in artifacts dir
distディレクトリはbuild以下のスクリプトファイルを参照する概念になったので、
最終出力はartifactsディレクトリにまとめるように変更。

--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,7 @@ dist
 
 # End of https://www.toptal.com/developers/gitignore/api/node
 
+artifacts/
 build/
 
 google-search-title-qualified.tar.gz
