ci: exclude @types/node major updates from dependabot
- Ignore major version updates for @types/node in dependabot config
- Node.js version is managed separately based on LTS policy

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,3 +22,7 @@ updates:
       eslint:
         patterns:
           - "*eslint*"
+    ignore:
+      - dependency-name: "@types/node" # Node.jsのバージョンはこちらでLTSを前提にコントロールしたいため。
+        update-types:
+          - "version-update:semver-major"
